# skill_level

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  mlit_main.py  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
data/csv/: criteria_flat.csv
skill_level/: database.py  downloader.py  extractor.py  models.py  scraper.py
skill_level/mlit/: __init__.py  database.py  downloader.py  models.py  parser.py  scraper.py
skill_level/parser/: __init__.py  _industry.py  _loaders.py  _models.py  _normalize.py  _style.py  _unit.py
tests/: conftest.py  test_database.py  test_extractor.py  test_loaders.py  test_mlit_database.py  test_mlit_parser.py  test_mlit_scraper.py  test_models.py  test_normalize.py  test_style_parser.py  test_unit_parser.py
