[project]
name = "skill-level"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12",
    "duckdb>=1.2",
    "httpx>=0.27",
    "lxml>=5.0",
    "openpyxl>=3.1",
    "pdfplumber>=0.11.9",
    "xlrd>=2.0",
]

[dependency-groups]
dev = [
    "mypy>=1.14",
    "pytest>=8.0",
    "ruff>=0.9",
    "types-beautifulsoup4>=4.12",
    "types-openpyxl>=3.1",
    "lxml-stubs>=0.5",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
    "PIE",  # flake8-pie
    "PL",   # pylint
    "PERF", # perflint
    "G",    # flake8-logging-format
    "LOG",  # flake8-logging
    "FURB", # refurb
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",    # line-too-long (ruff format handles this)
    "PLR0913", # too-many-arguments
    "PLR2004", # magic-value-comparison
    "SIM108",  # if-else-block-instead-of-ternary (readability preference)
    "FURB118", # operator-module-usage (readability preference)
    "RUF001",  # ambiguous unicode in strings (Japanese full-width chars are intentional)
    "RUF002",  # ambiguous unicode in docstrings (same reason)
    "RUF003",  # ambiguous unicode in comments (same reason)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "TC"]

[tool.ruff.lint.isort]
known-first-party = ["skill_level"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["xlrd"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
